이미지 경로수정

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         }
 
         .rightImg {
-            background-image: url(./IMG/file1_16450763511qly671qvc.jpg);
+            background-image: url(./img/file1_16450763511qly671qvc.jpg);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -314,7 +314,7 @@
 
         /* section3 */
         #sec3 {
-            background-image: url(../../IMG/woodin4.jpg);
+            background-image: url(./img/woodin4.jpg);
             width: 100%;
             height: 100%;
             display: flex;
@@ -327,7 +327,7 @@
         #sec3 .outBox {
             width: 95%;
             height: 92%;
-            background-image: url(../../IMG/woodin3.jpg);
+            background-image: url(./img/woodin3.jpg);
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -427,7 +427,7 @@
         .cursor {
             width: 106px;
             height: 106px;
-            background-image: url(../../IMG/slide_drag.png);
+            background-image: url(./img/slide_drag.png);
             border-radius: 50%;
             position: fixed;
             top: -53px;
@@ -452,7 +452,7 @@
             <div class="text2">
                 <p>우딘HAUS 제품으로 시공한 고객을 찾습니다</p>
             </div>
-            <img src="../../IMG/house.jpg" alt="house" width="100%" height="240px" />
+            <img src="./img/house.jpg" alt="house" width="100%" height="240px" />
             <div class="floor">
                 <button id="closeBtn">닫기</button>
             </div>
@@ -463,7 +463,7 @@
         <div class="navBox">
             <div class="menu">
                 <div class="leftBox">
-                    <img src="../../IMG/KakaoTalk_20250807_121259838.png" alt="logo" />
+                    <img src="./img/KakaoTalk_20250807_121259838.png" alt="logo" />
                     <h4>WOODIN</h4>
                     <h4>PRODUCTS</h4>
                     <h4>SUPPORT</h4>
@@ -479,7 +479,7 @@
     <section id="sec1">
 
         <div class="imgBox">
-            <img width=100% src="../../IMG/file1_16450763511qly671qvc.jpg" alt="">
+            <img width=100% src="./img/file1_16450763511qly671qvc.jpg" alt="">
             <div class="textBox">
                 <p>CREATING HEALING SPACE IS</p>
                 <p>WOODIN HAUSIS TOP PRIORITY</p>
@@ -681,9 +681,9 @@
                     <p>개인정보보호정책&nbsp;&nbsp;&nbsp;이메일무단수집거부</p>
                 </div>
                 <div class="logos">
-                    <img src="../../IMG/foot_sns1.png" alt="logo" />
-                    <img src="../../IMG/foot_sns2.png" alt="logo" />
-                    <img src="../../IMG/foot_sns3.png" alt="logo" />
+                    <img src="./img/foot_sns1.png" alt="logo" />
+                    <img src="./img/foot_sns2.png" alt="logo" />
+                    <img src="./img/foot_sns3.png" alt="logo" />
                 </div>
             </div>
 
